--- a/DrawnQuarterly/DrawnQuarterly.html
+++ b/DrawnQuarterly/DrawnQuarterly.html
@@ -28,6 +28,35 @@
 <div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly9.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrawnQuarterly40.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -41,50 +70,44 @@ Titles
 </p><p>
 <li><a href="DrawnQuarterly11.jpg">32 Stories</a> (1994)
 <li><a href="DrawnQuarterly12.jpg">365 Days</a> (2002)
-<li>5 is the Perfect Number (2003)
-<li>A Bubble (2018)
-<li>A Drifting Life (2009)
-<li>A Single Match
-<li>A User's Guide to Negletctful Parenting
-<li>A Walk in Eden
-<li>Abandon the Old in Tokyo (2006)
-<li>Abominable Mr. Seabrook (2017)
-<li>Above and Below: Two Stories of the American Frontier (2004)
-<li>ACME Novelty Datebook
-<li>Adult Contemporary (2015)
-<li>Adventures of Herge (2011)
-<li>Against Pain (2008)
-<li>All We Ever Do Is Talk About Wood (2008)
-<li>Animals with Sharpies
-<li>Anna &amp; Froga (2012)
-<li>Ant Colony (2014)
-<li>Art Comic (2018)
-<li>AYA (2007)
-<li>Babel (2004)
-<li>Bacter-Area (2005)
-<li>Bad Friends (2018)
-<li>Baking with Kafka (2017)
-<li>Beautiful Darkness (2014)
-<li>Becoming Horses
-<li>Benson's Cuckoos (2014)
-<li>Berlin (1998)
-<li>Beverly (2016)
-<li>Big Kids (2016)
-<li>Big Questions (2011)
-<li>Bigfoot (2010)
-<li>Birdseye Bristoe (2012)
-<li>Blabber Blabber Blabber
-<li>Black Blizzard (2010)
-<li>Blame This on the Boogie (2018)
-<li>Blankets (2015)
-<li>Boundless (2017)
-<li>Bumperhead (2014)
-<li>Bun Field (2009)
-<li>Burma Chronicles (2010)
+<li><a href="DrawnQuarterly13.jpg">5 is the Perfect Number</a> (2003)
+<li><a href="DrawnQuarterly14.jpg">Abandon the Old in Tokyo</a> (2006)
+<li><a href="../AbominableMrSeabrook/AbominableMrSeabrook.html">Abominable Mr. Seabrook</a> (2017)
+<li><a href="DrawnQuarterly15.jpg">Above and Below: Two Stories of the American Frontier</a> (2004)
+<li><a href="DrawnQuarterly16.jpg">ACME Novelty Datebook</a> (2003)
+<li><a href="DrawnQuarterly17.jpg">Adult Contemporary</a> (2015)
+<li><a href="DrawnQuarterly18.jpg">Adventures of Herge</a> (2011)
+<li><a href="DrawnQuarterly19.jpg">All We Ever Do Is Talk About Wood</a> (2008)
+<li><a href="DrawnQuarterly20.jpg">Animals with Sharpies</a> (2013)
+<li><a href="DrawnQuarterly21.jpg">Anna &amp; Froga</a> (2012)
+<li><a href="DrawnQuarterly22.jpg">Ant Colony</a> (2014)
+<li><a href="DrawnQuarterly23.jpg">Art Comic</a> (2018)
+<li><a href="DrawnQuarterly24.jpg">AYA</a> (2007)
+<li><a href="DrawnQuarterly25.jpg">Babel</a> (2004)
+<li><a href="DrawnQuarterly33.jpg">Bacter-Area</a> (2005)
+<li><a href="DrawnQuarterly34.jpg">Bad Friends</a> (2018)
+<li><a href="DrawnQuarterly35.jpg">Baking with Kafka</a> (2017)
+<li><a href="DrawnQuarterly26.jpg">Beautiful Darkness</a> (2014)
+<li><a href="DrawnQuarterly36.jpg">Becoming Horses</a> (2020)
+<li><a href="DrawnQuarterly37.jpg">Benson's Cuckoos</a> (2014)
+<li><a href="DrawnQuarterly38.jpg">Berlin</a> (1998)
+<li><a href="DrawnQuarterly39.jpg">Beverly</a> (2016)
+<li><a href="DrawnQuarterly40.jpg">Big Kids</a> (2016)
+<li><a href="DrawnQuarterly27.jpg">Big Questions</a> (2011)
+<li><a href="DrawnQuarterly28.jpg">Bigfoot</a> (2010)
+<li><a href="DrawnQuarterly42.jpg">Birdseye Bristoe</a> (2012)
+<li><a href="DrawnQuarterly41.jpg">Blabber Blabber Blabber</a> (2011)
+<li><a href="DrawnQuarterly29.jpg">Black Blizzard</a> (2010)
+<li><a href="DrawnQuarterly43.jpg">Blame This on the Boogie</a> (2018)
+<li><a href="../Blankets/Blankets.html">Blankets</a> (2015)
+<li><a href="../Boundless/Boundless.html">Boundless</a> (2017)
+<li><a href="DrawnQuarterly44.jpg">Bumperhead</a> (2014)
+<li><a href="DrawnQuarterly45.jpg">Bun Field</a> (2009)
+<li><a href="DrawnQuarterly30.jpg">Burma Chronicles</a> (2010)
 <li>Carnet de Voyage (2018)
-<li>Carpet Sweeper Tales     (2016) 
-<li>Catland Empire  2010 
-<li>Cave-In  2012  
+<li>Carpet Sweeper Tales  (2016) 
+<li><a href="DrawnQuarterly31.jpg">Catland Empire</a>  (2010) 
+<li><a href="DrawnQuarterly32.jpg">Cave-In</a> (2012)  
 <li>Cecil and Jordan in New York (2009)
 <li>Cheap Novelties: The Pleasures of Urban Decay  (2016)
 <li>Chronicles of Lucky Ello (2004)
@@ -110,7 +133,7 @@ Titles
 <li>Dirty Plotte: The Complete Julie Doucet  (2018)
 <li>Dogs and Water  (2004) 
 <li>Don't Go Where I Can't Follow  (2006)
-<li>Drawn &amp; Quarterly (1990)
+<li><a href="../DrawnQuarterlyMag/DrawnQuarterlyMag.html">Drawn &amp; Quarterly</a> (1990)
 <li>Earthling    (2014)
 <li>Ed the Happy Clown  (2005)
 <li>Eden     (2010) 
@@ -156,8 +179,7 @@ Titles
 <li>Haunted  (2008)
 <li>Hicksville   (2001)  
 <li>Hospital Suite   (2014) 
-<li>Hostage  (2017) 
-<li>Hostage / Poppies of Iraq  (2017)  
+<li><a href="../Hostage/Hostage.html">Hostage</a>  (2017) 
 <li>Hot Comb     (2019) 
 <li>Hot Dog Taste Test   (2016)
 <li>Hot Potatoe  2009
@@ -239,14 +261,13 @@ Titles
 <li>Over Easy    (2014) 
 <li>Owner's Manual to Terrible Parenting     (2015) 
 <li>Palimpsest: Documents From a Korean Adoption  
-<li>Palooka-Ville    (1991) 
-<li>Palooka-Ville (10th Anniversary Special Re-Issue)    (2001) 
+<li><a href="../PalookaVille/PalookaVille.html">Palooka-Ville</a> (1991) 
 <li>Panther  (2016)
 <li>Paul Goes Fishing    (2008) 
 <li>Paul Has a Summer Job   (2003) 
 <li>Paul in the Country  (2000) 
 <li>Paul Moves Out   (2005)   
-<li>Paying for It    (2011) 
+<li><a href="../PayingForIt/PayingForIt.html">Paying for It</a> (2011) 
 <li>Peepshow     (1992) 
 <li>Peepshow: The Cartoon Diary of Joe Matt (1999)
 <li>Perfect Example  (2005)  
@@ -272,7 +293,7 @@ Titles
 <li>Reunion  (2011)
 <li>Road to America  (2002) 
 <li>Rolling Blackouts: Dispatches from Turkey, Syria, and Iraq   (2016)
-<li>Sabrina  (2018)
+<li><a href="../DrnasoSabrina/DrnasoSabrina.html">Sabrina</a>  (2018)
 <li>Scenes from an Impending Marriage   (2011) 
 <li>Scrapbook: Uncollected Work (2004)
 <li>Secretimes   (2016) 
@@ -298,7 +319,7 @@ Titles
 <li>Spaniel Rage     (2017) 
 <li>Spent    (2007) 
 <li>Step Aside, Pops (A Hark! A Vagrant Collection) (2015)
-<li>Sticks Angelica, Folk Hero   (2017) 
+<li><a href="../SticksAngelica/SticksAngelica.html">Sticks Angelica, Folk Hero</a> (2017) 
 <li>Stories from Bosnia: Soba    (1998)
 <li>Strange  (2018)
 <li>Stroppy  (2015)
@@ -339,7 +360,7 @@ Titles
 <li>Yellow Yellow    (2019)
 <li>You're All Just Jealous of My Jetpack    (2013)
 <li>Yow! (2010)
-<li>Yummy Fur (1991)
+<li><a href="../YummyFur/YummyFur.html">Yummy Fur</a> (1991)
 
 </p>
 
