--- a/index.html
+++ b/index.html
@@ -16782,7 +16782,7 @@
 <tr>
 <td>Steeltown Rockers</td>
 <td>1990</td>
-<td>Drawn &amp; Quarterly</td>
+<td>Marvel</td>
 <td><a href="SteeltownRockers/SteeltownRockers.html">Details</a></td>
 </tr>
 
