--- a/index.html
+++ b/index.html
@@ -4199,7 +4199,7 @@
 <td>Care Bears</td>
 <td>1981</td>
 <td>American Greetings</td>
-<td><a href="CareBears/CareBears.html">Details</a></td>
+<td><a href="AmericanGreetings/AmericanGreetings.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7755,6 +7755,13 @@
 </tr>
 
 <tr>
+<td>Frank</td>
+<td>1985</td>
+<td>Fantagraphics</td>
+<td><a href="Frank/Frank.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Frank Frazetta</td>
 <td>1928</td>
 <td>Creator</td>
@@ -10189,6 +10196,13 @@
 <td>1938</td>
 <td>Creator</td>
 <td><a href="JimSteranko/JimSteranko.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jim Woodring</td>
+<td>1952</td>
+<td>Creator</td>
+<td><a href="JimWoodring/JimWoodring.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16951,7 +16965,7 @@
 <td>Strawberry Shortcake</td>
 <td>1980</td>
 <td> American Greetings</td>
-<td><a href="StrawberryShortcake/StrawberryShortcake.html">Details</a></td>
+<td><a href="AmericanGreetings/AmericanGreetings.html">Details</a></td>
 </tr>
 
 <tr>
