--- a/Jim/Jim.html
+++ b/Jim/Jim.html
@@ -33,9 +33,9 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-4 issues in 1987, 6 issues in 1993, 1 issues 2014. Created by Jim Woodring, published by <a href="../Fantagraphics/Fantagraphics.html">Fantagrapics</a>
+4 issues in 1987, 6 issues in 1993, 1 issues 2014. Created by <a href="../JimWoodring/JimWoodring.html">Jim Woodring</a>, published by <a href="../Fantagraphics/Fantagraphics.html">Fantagrapics</a>
 </p><p>
-Jim is a comic book series by Jim Woodring. It began in 1980[citation needed] as a self-published zine and was picked up by Fantagraphics Books in 1986 after cartoonist Gil Kane introduced Woodring to Fantagraphics co-owner Gary Groth. The publisher released four magazine-sized black-and-white issues starting in September 1987. A comic book-sized continuation, Jim Volume II, with some color, began in 1993 and ran for six issues until 1996.
+Jim is a comic book series by Jim Woodring. It began in 1980 as a self-published zine and was picked up by Fantagraphics Books in 1986 after cartoonist Gil Kane introduced Woodring to Fantagraphics co-owner Gary Groth. The publisher released four magazine-sized black-and-white issues starting in September 1987. A comic book-sized continuation, Jim Volume II, with some color, began in 1993 and ran for six issues until 1996.
 </p><p>
 Jim, which Woodring described as an "autojournal", contained comics on a variety of subjects, many based on dreams, as well as surreal drawings and free-form text which resembled Jimantha automatic writing. Besides dreams, the work drew on Woodring's childhood experiences, hallucinations, past alcoholism, and Hindu beliefs. It also included stories of recurring Woodring characters such as Pulque (the embodiment of drunkenness), boyhood friends Chip and Monk, and, in Volume II, his signature creation Frank. 
 </p>
