--- a/3BoysProductions/3BoysProductions.html
+++ b/3BoysProductions/3BoysProductions.html
@@ -33,6 +33,12 @@
 </div></div>
 </p><p>
 <a href="http://3boysproductions.com/">3 Boys Productions</a> hit the scene around 2004.
+</p><p>
+Titles
+</p><p>
+<li><a href="3BoysProductions1.jpg">Students of the Unusual</a> (2004)
+<li><a href="3BoysProductions6.jpg">Healing Will Make You Whole</a> (2020)
+<li><a href="3BoysProductions8.jpg">Horse Power G</a>
 </p>
 
 </body>
