--- a/ECComics/ECComics.html
+++ b/ECComics/ECComics.html
@@ -63,6 +63,7 @@ In 1954–55, censorship pressures prompted it to concentrate on the humor magaz
 <li><a href="../CrimeIllustrated/CrimeIllustrated.html">Crime Illustrated</a>  (1955)
 <li><a href="../International/International.html">Crime Patrol</a> (1948)
 <li><a href="../CrimeSuspenStories/CrimeSuspenStories.html">Crime SuspenStories</a> (1950) 
+<li><a href="CryptOfTerror17.jpg">Crypt of Terror</a> (1950)
 <li><a href="../Dandy/Dandy.html">Dandy Comics</a> (1947)
 <li><a href="Extra1.jpg">Extra!</a> (1955)
 <li><a href="../FatAndSlat/FatAndSlat.html">Fat and Slat</a>  (1947)
@@ -72,6 +73,7 @@ In 1954–55, censorship pressures prompted it to concentrate on the humor magaz
 <li><a href="../HauntOfFear/HauntOfFear.html">Haunt of Fear</a> (1950)
 <li><a href="Impact1.jpg">Impact</a> (1955) 
 <li><a href="../IncredibleSF/IncredibleSF.html">Incredible Science Fiction</a> (1955)
+<li><a href="../International/International.html">International Comics</a> (1947)
 <li><a href="LandOfTheLost1.jpg">Land of the Lost</a> (1946)
 <li><a href="MD1.jpg">M.D.</a> (1955)
 <li><a href="../Mad/Mad.html">Mad</a> (1952)
@@ -89,15 +91,13 @@ In 1954–55, censorship pressures prompted it to concentrate on the humor magaz
 <li><a href="SaddleJustice3.jpg">Saddle Justice</a>  (1948)
 <li><a href="Shock1.jpg">Shock Illustrated</a> (1955)
 <li><a href="../ShockSuspenstories/ShockSuspenstories.html">Shock SuspenStories</a> (1952)
-<li><a href="TerrorIllustrated1.jpg">Terror Illustrated</a> (1955)
-<li><a href="CryptOfTerror17.jpg">The Crypt of Terror</a> (1950)
 <li><a href="../TalesFromTheCrypt/TalesFromTheCrypt.html">Tales from the Crypt</a> (1950)
-<li><a href="../HauntOfFear/HauntOfFear.html">The Haunt of Fear</a> (1950)
-<li><a href="../VaultOfHorror/VaultOfHorror.html">The Vault of Horror</a> (1950) 
+<li><a href="TerrorIllustrated1.jpg">Terror Illustrated</a> (1955)
 <li><a href="3DECClassics1.jpg">Three Dimensional E.C. Classics</a> (1954) 
 <li><a href="TinyTot1.jpg">Tiny Tot Comics</a> (1946)
 <li><a href="TwoFistedTales18.jpg">Two-Fisted Tales</a> (1950) 
 <li><a href="Valor1.jpg">Valor</a> (1955) 
+<li><a href="../VaultOfHorror/VaultOfHorror.html">Vault of Horror</a> (1950) 
 <li><a href="WarAgainstCrime1.jpg">War Against Crime!</a> (1948)
 <li><a href="../WeirdFantasy/WeirdFantasy.html">Weird Fantasy</a> (1950)
 <li><a href="../WeirdScience/WeirdScience.html">Weird Science</a> (1950)
