--- a/index.html
+++ b/index.html
@@ -7200,6 +7200,13 @@
 <td>Vertigo</td>
 <td><a href="Exterminators/Exterminators.html">Details</a></td>
 </tr>
+ 
+<tr>
+<td>Extra!</td>
+<td>1955</td>
+<td>EC</td>
+<td><a href="ECComics/ECComics.html">Details</a></td>
+</tr>
 
 <tr>
 <td>Extraordinary X-Men</td>
@@ -8728,6 +8735,13 @@
 </tr>
 
 <tr>
+<td>Gunfighter</td>
+<td>1948</td>
+<td>EC</td>
+<td><a href="ECComics/ECComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Gunhawk</td>
 <td>1948</td>
 <td>Marvel</td>
@@ -8871,6 +8885,13 @@
 <td>1903</td>
 <td>New York American</td>
 <td><a href="HappyHooligan/HappyHooligan.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Happy Houlihans</td>
+<td>1947</td>
+<td>EC</td>
+<td><a href="ECComics/ECComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9629,6 +9650,13 @@
 <td>2007</td>
 <td>Marvel</td>
 <td><a href="ImmortalIronFist/ImmortalIronFist.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Impact</td>
+<td>1955</td>
+<td>EC</td>
+<td><a href="ECComics/ECComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10977,6 +11005,13 @@
 
 <tr>
 <td>Land of the Lost</td>
+<td>1946</td>
+<td>EC</td>
+<td><a href="ECComics/ECComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Land of the Lost</td>
 <td>1974</td>
 <td>NBC</td>
 <td><a href="LandOfTheLostTV/LandOfTheLostTV.html">Details</a></td>
@@ -11564,7 +11599,14 @@
 </tr>
 
 <tr>
-<td><a name ="m">Mac Raboy</td>
+<td><a name ="m">M.D.</td>
+<td>1955</td>
+<td>EC</td>
+<td><a href="ECComics/ECComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mac Raboy</td>
 <td>1914</td>
 <td>Creator</td>
 <td><a href="MacRaboy/MacRaboy.html">Details</a></td>
@@ -12814,6 +12856,13 @@
 <td>1963</td>
 <td>Marvel</td>
 <td><a href="LifeWithMillie/LifeWithMillie.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Modern Love</td>
+<td>1949</td>
+<td>EC</td>
+<td><a href="ECComics/ECComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14322,6 +14371,13 @@
 </tr>
 
 <tr>
+<td>Picture Stories from American History</td>
+<td>1945</td>
+<td>EC</td>
+<td><a href="ECComics/ECComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Pines Comics</td>
 <td>1936</td>
 <td>Publisher</td>
@@ -14333,6 +14389,13 @@
 <td>1993</td>
 <td>Marvel</td>
 <td><a href="Pinhead/Pinhead.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Piracy</td>
+<td>1954</td>
+<td>EC</td>
+<td><a href="ECComics/ECComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14642,6 +14705,13 @@
 <td>1991</td>
 <td>DC</td>
 <td><a href="PsychoDC/PsychoDC.html">Details</a></td>
+</tr>
+ 
+<tr>
+<td>Psychoanalysis</td>
+<td>1955</td>
+<td>EC</td>
+<td><a href="ECComics/ECComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15366,6 +15436,13 @@
 </tr>
 
 <tr>
+<td>Saddle Justice</td>
+<td>1948</td>
+<td>EC</td>
+<td><a href="ECComics/ECComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sachs and Violens</td>
 <td>1993</td>
 <td>Epic</td>
@@ -15930,6 +16007,13 @@
 <td>1952</td>
 <td>Star Publications</td>
 <td><a href="ShockDetectiveCases/ShockDetectiveCases.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Shock Illustrated</td>
+<td>1955</td>
+<td>EC</td>
+<td><a href="ECComics/ECComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17375,6 +17459,13 @@
 </tr>
 
 <tr>
+<td>Terror Illustrated</td>
+<td>1955</td>
+<td>EC</td>
+<td><a href="ECComics/ECComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Terror Tales</td>
 <td>1969</td>
 <td>Eerie</td>
@@ -17522,6 +17613,13 @@
 </tr>
 
 <tr>
+<td>Three Dimensional E.C. Classics</td>
+<td>1954</td>
+<td>EC</td>
+<td><a href="ECComics/ECComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Three Ring Comics</td>
 <td>1945</td>
 <td>Spotlight</td>
@@ -17631,6 +17729,13 @@
 <td>1984</td>
 <td>Marvel</td>
 <td><a href="Timespirits/Timespirits.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tiny Tot Comics</td>
+<td>1946</td>
+<td>EC</td>
+<td><a href="ECComics/ECComics.html">Details</a><td>
 </tr>
 
 <tr>
@@ -17876,6 +17981,12 @@
 <td>1982</td>
 <td>PC</td>
 <td><a href="TwistedTales/TwistedTales.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Two-Fisted Tales</td>
+<td>1950</td>
+<td><a href="ECComics/ECComics.html">Details</a></td> 
 </tr>
 
 <tr>
@@ -18395,6 +18506,13 @@
 <td>1952</td>
 <td>Atlas</td>
 <td><a href="WarAdventures/WarAdventures.html">Details</a></td>
+</tr>
+
+<tr>
+<td>War Against Crime!</td>
+<td>1948</td>
+<td>EC</td>
+<td><a href="ECComics/ECComics.html">Details</a></td> 
 </tr>
 
 <tr>
