--- a/PacificComics/PacificComics.html
+++ b/PacificComics/PacificComics.html
@@ -10,6 +10,28 @@
 <body>
 <img src="PacificComics.jpg">
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="PacificComics1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PacificComics2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PacificComics3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PacificComics4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PacificComics5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PacificComics6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PacificComics7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PacificComics8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PacificComics9.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Pacific Comics (PC) was an independent comic book publisher that flourished from 1981–1984. It was also a chain of comics shops and a distributor. It began out of a San Diego, California, comic book shop owned by brothers Bill and Steve Schanes. Along with competitors like First Comics and Eclipse Comics, PC took early advantage of the growing direct market, attracting a number of writers and artists from DC and Marvel to produce creator-owned titles, which were not subject to the Comics Code, and thus were free to feature more mature content.
 </p><p>
 Steve, with a degree in sculpture had a background in art, handled negotiations with creators, while Bill took on the business and accounting end. The brothers turned to Jack Kirby. Steve Schanes recalled, "I figured if you want to get people's attention with a new comic book, who better to do it with than the King of Comics, Jack Kirby! We were already friends with Jack. We used to send him free copies of comics he'd drawn for other publishers because they never sent him any! So I just went ahead and called him on the phone, and he turned out to be a nice guy, completely accessible. We negotiated a whole detailed publishing deal between the two of us. No middlemen."
@@ -24,7 +46,7 @@ Writer Jay Allen Sanford stated that Pacific "formed the template for Image Comi
 </p><p>
 <li><a href="../CorbenSpecial/CorbenSpecial.html">A Corben Special</a> (1984)
 <li><a href="../AlienWorlds/AlienWorlds.html">Alien Worlds</a> (1982)
-<li>Art of Al Williamson (1983)
+<li><a href="../ArtOfAlWilliamson/ArtOfAlWilliamson.html">Art of Al Williamson</a> (1983)
 <li><a href="../DemonDreams/DemonDreams.html">Arthur Suydam's Demon Dreams</a> (1984)
 <li><a href="../BerniWrightsonMasterMacabre/BerniWrightsonMasterMacabre.html">Berni Wrightson Master of the Macabre</a> (1983)
 <li><a href="../BoldAdventure/BoldAdventure.html">Bold Adventure</a> (1983)
@@ -33,28 +55,28 @@ Writer Jay Allen Sanford stated that Pacific "formed the template for Image Comi
 <li><a href="../Darklon/Darklon.html">Darklon the Mystic</a> (1983)
 <li><a href="../EdgeOfChaos/EdgeOfChaos.html">Edge of Chaos</a> (1983)
 <li><a href="../Elric/elric.html">Elric of Melniboné</a> (1983)
-<li>Famous Movie Stars of the 30's (1984)
-<li>Ghita of Alizarr (1983)
+<li><a href="PacificComics2.jpg">Famous Movie Stars of the 30's</a> (1984)
+<li><a href="PacificComics3.jpg">Ghita of Alizarr</a> (1983)
 <li><a href="../Groo/Groo.html">Groo the Wanderer</a> (1982)
 <li><a href="../1stFolio/1stFolio.html">Joe Kubert's 1st Folio</a> (1984)
 <li><a href="../MsMystic/MsMystic.html">Ms. Mystic</a> (1982)
 <li><a href="../One/One.html">One</a> (1977)
 <li><a href="../PacificPresents/PacificPresents.html">Pacific Presents</a> (1982)
 <li><a href="PacificComics1.jpg">Pathways To Fantasy</a> (1984)
-<li>Planet Comics (1984)
+<li><a href="PacificComics4.jpg">Planet Comics</a> (1984)
 <li><a href="../Rocketeer/Rocketeer.html">The Rocketeer</a>
-<li>Ravens and Rainbows (1983)
+<li><a href="PacificComics5.jpg">Ravens and Rainbows</a> (1983)
 <li><a href="../Silverstar/Silverstar.html">Silver Star</a> (1983)
 <li><a href="../Silverheels/Silverheels.html">Silverheels</a> (1983)
-<li>Skateman (1983)
+<li><a href="PacificComics6.jpg">Skateman</a> (1983)
 <li><a href="../SomersetHolmes/SomersetHolmes.html">Somerset Holmes</a> (1983)
-<li>Starslayer (1982)
-<li>Sun Runners (1984)
-<li>Thillogy (1984)
-<li>Twisted Tales (1982)
-<li>Vanguard Illustrated (1983)
-<li>Vanity (1984)
-<li>Wild Animals (1982)
+<li><a href="../Starslayer/Starslayer.html">Starslayer</a> (1982)
+<li><a href="../SunRunners/SunRunners.html">Sun Runners</a> (1984)
+<li><a href="PacificComics7.jpg">Thillogy</a> (1984)
+<li><a href="../TwistedTales/TwistedTales.html">Twisted Tales</a> (1982)
+<li><a href="../VanguardIllustrated/VanguardIllustrated.html">Vanguard Illustrated</a> (1983)
+<li><a href="PacificComics8.jpg">Vanity</a> (1984)
+<li><a href="PacificComics9.jpg">Wild Animals</a> (1982)
 </p>
 
 </body>
