--- a/index.html
+++ b/index.html
@@ -7293,6 +7293,13 @@
 </tr>
 
 <tr>
+<td>Famous Movie Stars of the 30's</td> 
+<td>1984</td>
+<td>Pacific Comics</td>
+<td><a href="PacificComics/PacificComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fantagraphics Books</td>
 <td>1976</td>
 <td>Publisher</td>
@@ -8284,6 +8291,13 @@
 <td>1954</td>
 <td>Mikeross</td>
 <td><a href="GetLost/GetLost.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ghita of Alizarr</td> 
+<td>1983</td>
+<td>PC</td>
+<td><a href="PacificComics/PacificComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14217,6 +14231,13 @@
 </tr>
 
 <tr>
+<td>Pathways To Fantasy</td>
+<td>1984</td>
+<td>PC</td>
+<td><a href="PacificComics/PacificComics.html">Details</a></td> 
+</tr>
+
+<tr>
 <td>Patsy Walker</td>
 <td>1945</td>
 <td>Marvel</td>
@@ -14418,6 +14439,12 @@
 <td>Fiction House</td>
 <td><a href="PlanetComics/PlanetComics.html">Details</a></td>
 </tr>
+
+<tr>
+<td>Planet Comics</td>
+<td>1984</td>
+<td>Pacific Comics</td>
+<td><a href="PacificComics/PacificComics.html">Details</a></td>
 
 <tr>
 <td>Planet Hulk</td>
@@ -14880,6 +14907,13 @@
 <td>2013</td>
 <td>Image</td>
 <td><a href="RatQueens/RatQueens.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ravens and Rainbows</td>
+<td>1983</td>
+<td>Pacific Comics</td>
+<td><a href="PacificComics/PacificComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16189,6 +16223,13 @@
 <td>2008</td>
 <td>Marvel</td>
 <td><a href="Skaar/Skaar.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Skateman</td>
+<td>1983</td>
+<td>PC</td>
+<td><a href="PacificComics/PacificComics.html">Details</a><td>
 </tr>
 
 <tr>
@@ -17627,6 +17668,13 @@
 </tr>
 
 <tr>
+<td>Thrillogy</td>
+<td>1984</td>
+<td>PC</td>
+<td><a href="PacificComics/PacificComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Thundarr the Barbarian</td>
 <td>1980</td>
 <td>ABC</td>
@@ -17952,7 +18000,7 @@
 <td>True Tales of Love</td>
 <td>1956</td>
 <td>Atlas</td>
-<td><a href="TrueTalesOfLove/TrueTalesOfLove.html">Details</a></td>
+<td><a href="TrueTalesOfLove/TrueTalesOfLove.html">Details</a></td>Vanity</a> (1984)
 </tr>
 
 <tr>
@@ -17986,6 +18034,7 @@
 <tr>
 <td>Two-Fisted Tales</td>
 <td>1950</td>
+<td>EC</td>
 <td><a href="ECComics/ECComics.html">Details</a></td> 
 </tr>
 
@@ -18062,7 +18111,7 @@
 <tr>
 <td>Unbeatable Squirrel Girl</td>
 <td>2015</td>
-<td>Marvel</td>
+<td>Marvel</td>Vanity</a> (1984)
 <td><a href="UnbeatableSquirrelGirl/UnbeatableSquirrelGirl.html">Details</a></td>
 </tr>
 
@@ -18281,6 +18330,13 @@
 <td>1983</td>
 <td>PC</td>
 <td><a href="VanguardIllustrated/VanguardIllustrated.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Vanity</td>
+<td>1984</td>
+<td>PC</td>
+<td><a href="PacificComics/PacificComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -18961,6 +19017,13 @@
 <td>1948</td>
 <td>Atlas</td>
 <td><a href="WildWest/WildWest.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wild Animals</td>
+<td>1982</td>
+<td>PC</td>
+<td><a href="PacificComics/PacificComics.html">Details</a></td>
 </tr>
 
 <tr>
