--- a/SunRunners/SunRunners.html
+++ b/SunRunners/SunRunners.html
@@ -8,9 +8,7 @@
 </head>
 
 <body>
-<img src="SunRunners1.jpg"><br>
-7 issues, 1984, #1-3 PC Comics, #4-7 Eclipse<br>
-Story by Roger McKenzie. Art and cover by Pat Broderick.
+<img src="SunRunners1.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -32,8 +30,9 @@ Story by Roger McKenzie. Art and cover by Pat Broderick.
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
+7 issues, 1984, #1-3 PC Comics, #4-7 Eclipse. Story by Roger McKenzie. Art and cover by Pat Broderick.
+</p><p>
 Sun-Runners takes place in a future where the distribution of energy requires a network that spans thousands of worlds. On a huge power station called Daybreak, a group led by Mark Dancer acts as troubleshooters, patching up problems both mechanical and humanoid. Dancer’s crew includes Delphi, the ship’s captain and a powerful psychic; Doctor Gibraltar, an elephant-like powerhouse who is also a near-genius; and Scooter, their sentient engineering robot.
-
 </p>
 </body>
 </html>
