--- a/PlanetHulk/PlanetHulk.html
+++ b/PlanetHulk/PlanetHulk.html
@@ -55,7 +55,7 @@ Hulk leads a raid on the Red King's capital, culminating in a one-on-one battle 
 </p><p>
 Meanwhile, the shuttle that brought Hulk to Sakaar is being turned into a monument. As part of its self-destruct sequence, the antimatter warp core engine detonates in a massive explosion. The whole city is destroyed, and Caiera dies. Enraged and blaming the Avengers who built the shuttle for the damage, Hulk and his warbound leave Sakaar and head for Earth.
 </p><p>
-Arriving on Earth, Hulk and the warbound begin World War Hulk.
+Arriving on Earth, Hulk and the warbound begin <a href="../WorldWarHulk/WorldWarHulk.html">World War Hulk</a>.
 </p>
 </body>
 </html>
