--- a/AardvarkVanaheim/AardvarkVanaheim.html
+++ b/AardvarkVanaheim/AardvarkVanaheim.html
@@ -8,7 +8,31 @@
 </head>
 
 <body>
-<h1>Aardvark-Vanaheim</h1>
+<h2>Aardvark-Vanaheim</h2>
+<p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="../Cerebus/Cerebus.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../FlamingCarrot/FlamingCarrot1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Glamourpuss/Glamourpuss1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Journey/Journey1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Judenhass1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Normalman1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../NeilTheHorse/NeilTheHorse1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MsTree1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PumaBlues1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StrangeBrew1.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Aardvark-Vanaheim is a Canadian independent comic book publisher founded in 1977 by Dave Sim and Deni Loubert and is best known for publishing Sim's Cerebus.
 <p>
 In July 1984, Aardvark-Vanaheim was threatened with possible legal action by Marvel Comics over a parody of Marvel's Wolverine character in Cerebus.
@@ -17,17 +41,18 @@ For a brief time, the company also published other titles, sometimes under the n
 </p><p>
 A-V's offices are located in Kitchener, Ontario. 
 </p><p>
-<li><a href="../Cerebus/Cerebus.html">Cerebus the Aardvark</a> issues 1–300: also reprint titles Swords of Cerebus, Cerebus World Tour Book, Cerebus Number Zero, and the Cerebus "phone book" omnibuses.
-<li>glamourpuss: issues 1–26
-<li>Cerebus Archive: issues 1–18
-<li>Journey (William Messner-Loebs): issues 1–14 (moved to Fantagraphics)
-<li>Judenhass: Dave Sim one-shot
-<li>Flaming Carrot Comics (Bob Burden): issues 1–5 (moved to Renegade Press)
-<li>normalman (Jim Valentino): issues 1–8 (moved to Renegade Press)
-<li><a href="../NeilTheHorse/NeilTheHorse.html">Neil the Horse</a> (Katherine Collins): issues 1–10 (moved to Renegade Press)
-<li>Ms. Tree issues 10–15 (came from Eclipse Comics, then moved to Renegade Press)
-<li>The Puma Blues (Stephen Murphy and Michael Zulli): issues 1–17 (issue 18 would be self-published)
-<li>Strange Brew (Michael T. Gilbert) one-shot
+Titles
+</p><p>
+<li><a href="../Cerebus/Cerebus.html">Cerebus the Aardvark</a> (1977)
+<li><a href="../FlamingCarrot/FlamingCarrot.html">Flaming Carrot Comics</a> (1979)
+<li><a href="../Glamourpuss/Glamourpuss.html">Glamourpuss</a> (2008)
+<li><a href="../Journey/Journey.html">Journey</a> (1983)
+<li><a href="Judenhass1.jpg">Judenhass</a> (2008)
+<li><a href="MsTree1.jpg">Ms. Tree</a> (1984)
+<li><a href="Normalman1.jpg">Normalman</a> (1985)
+<li><a href="../NeilTheHorse/NeilTheHorse.html">Neil the Horse</a> (1983)
+<li><a href="PumaBlues1.jpg">Puma Blues</a> (1986)
+<li><a href="StrangeBrew1.jpg">Strange Brew</a> (1982)
 </p>
 </body>
 </html>
