--- a/index.html
+++ b/index.html
@@ -10486,6 +10486,13 @@
 </tr>
 
 <tr>
+<td>Judenhass</td> 
+<td>2008</td>
+<td>Aardvark-Vanaheim</td>
+<td><a href="AardvarkVanaheim/AardvarkVanaheim.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Judge Dredd</td>
 <td>1977</td>
 <td>IPC</td>
@@ -13132,6 +13139,13 @@
 </tr>
 
 <tr>
+<td>Ms. Tree</td>
+<td>1984</td>
+<td>Aardvark-Vanaheim</td>
+<td><a href="AardvarkVanaheim/AardvarkVanaheim.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Multiversity</td>
 <td>2014</td>
 <td>DC</td>
@@ -13808,6 +13822,13 @@
 <td>1990</td>
 <td>Marvel</td>
 <td><a href="Nomad/Nomad.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Normalman</td>
+<td>1985</td>
+<td>Aardvark-Vanaheim</td>
+<td><a href="AardvarkVanaheim/AardvarkVanaheim.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14767,6 +14788,13 @@
 <td>2004</td>
 <td>Marvel</td>
 <td><a href="Pulse/Pulse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Puma Blues</td>
+<td>1986</td>
+<td>Aardvark-Vanaheim</td>
+<td><a href="AardvarkVanaheim/AardvarkVanaheim.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16597,6 +16625,20 @@
 </tr>
 
 <tr>
+<td>S.R. Bissette’s SpiderBaby Comix</td>
+<td>1996</td>
+<td>Spiderbaby Graphix</td>
+<td><a href="SteveBissette/SteveBissette.html">Details</a></td>
+</tr>
+
+<tr>
+<td>S.R. Bissette’s Tyrant</td>
+<td>1994</td>
+<td>Spiderbaby Graphix</td>
+<td><a href="SteveBissette/SteveBissette.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Spinning</td>
 <td>2017</td>
 <td>First Second</td>
@@ -17010,6 +17052,13 @@
 </tr>
 
 <tr>
+<td>Strange Brew</td>
+<td>1982</td>
+<td>Aardvark-Vanaheim</td>
+<td><a href="AardvarkVanaheim/AardvarkVanaheim.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Strange Combat Tales</td>
 <td>1993</td>
 <td>Epic</td>
@@ -17301,6 +17350,13 @@
 <td>2018</td>
 <td>HeavyMetal</td>
 <td><a href="Taarna/Taarna.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Taboo</td>
+<td>1982</td>
+<td>Spiderbaby Grafix</td>
+<td><a href="SteveBissette/SteveBissette.html">Details</a></td>
 </tr>
 
 <tr>
