--- a/ShadowsAndLight/ShadowsAndLight.html
+++ b/ShadowsAndLight/ShadowsAndLight.html
@@ -8,25 +8,8 @@
 </head>
 
 <body>
-<img src="ShadowsAndLight1.jpg"> <br>
-Series: 3 issues 1998<br>
-Publisher: Marvel<br>
+<img src="ShadowsAndLight1.jpg">
 <p>
-A short-lived anthology title from Marvel featuring black and white stories and articles.<br>
-Issue #1:<ul>
-<li>Cover by Brian Stelfreeze.
-<li>Punisher illustration by Rodolfo Damaggio. 
-<li>Short articles on Gene Ha and Gerard Jones.
-<li>"Free Fall," script by Gerard Jones, art by Gene Ha. Origin of Black Widow. Widow fights a Soviet Super Soldier who turns out to be her older brother. 
-<li>Short article on Bernie Wrightson. "Limited Intellect!" starring Hulk, script and art by Bernie Wrightson. 
-<li>Short articles on Len Wein and Steve Ditko. 
-<li>"A Man's Reach...!" starring Iron Man, script by Steve Ditko (plot) and Len Wein, art by Steve Ditko. 
-<li>Short articles on Ron Marz and Brian Stelfreeze. 
-<li>Frankenstein vs. Wolfman illustration by Tom Grindberg. 
-<li>Thor illustration by Cam Smith. 
-<li>Wolverine illustration by Joe Bennett.
-</ul>
-</p><p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -43,6 +26,25 @@ Issue #1:<ul>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 
+</p><p>
+3 issues in 1998 by Marvel
+<p>
+A short-lived anthology title from Marvel featuring black and white stories and articles.
+</p><p>
+Issue #1:<ul>
+<li>Cover by Brian Stelfreeze.
+<li>Punisher illustration by Rodolfo Damaggio. 
+<li>Short articles on Gene Ha and Gerard Jones.
+<li>"Free Fall," script by Gerard Jones, art by Gene Ha. Origin of Black Widow. Widow fights a Soviet Super Soldier who turns out to be her older brother. 
+<li>Short article on Bernie Wrightson. "Limited Intellect!" starring Hulk, script and art by Bernie Wrightson. 
+<li>Short articles on Len Wein and Steve Ditko. 
+<li>"A Man's Reach...!" starring Iron Man, script by Steve Ditko (plot) and Len Wein, art by Steve Ditko. 
+<li>Short articles on Ron Marz and Brian Stelfreeze. 
+<li>Frankenstein vs. Wolfman illustration by Tom Grindberg. 
+<li>Thor illustration by Cam Smith. 
+<li>Wolverine illustration by Joe Bennett.
+</ul>
 </p>
+
 </body>
 </html>
