--- a/SteveBissette/SteveBissette.html
+++ b/SteveBissette/SteveBissette.html
@@ -43,6 +43,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Bissette22.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Bissette23.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Bissette24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="1941.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -54,6 +55,7 @@ Since 1991, Bissette has presented a lecture series on horror comics called "Jou
 </p><p>
 Titles
 </p><p>
+<li><a href="1941.jpg">1941 The Illustrated Story</a> (1979)
 <li><a href="Bissette13.jpg">S.R. Bissette's Tyrant</a>	(1994)
 <li><a href="Bissette17.jpg">S.R. Bissette’s SpiderBaby Comix</a> (1996)
 <li><a href="Bissette1.jpg">Taboo</a> (1988)
