--- a/index.html
+++ b/index.html
@@ -331,6 +331,13 @@
 </tr>
 
 <tr>
+<td>1941 The Illustrated Story</td>
+<td>1979</td>
+<td>Heavy Metal</td>
+<td><a href="SteveBissette/SteveBissette.html">Details</a></td>
+</tr>
+
+<tr>
 <td>1984</td>
 <td>1978</td>
 <td>Warren</td>
@@ -1926,6 +1933,13 @@
 </tr>
 
 <tr>
+<td>Andy</td>
+<td>1948</td>
+<td>Ace</td>
+<td><a href="AceMagazines/AceMagazines.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Andy Kubert</td>
 <td>1962</td>
 <td>Creator</td>
@@ -2418,7 +2432,7 @@
 <tr>
 <td>Atomic War</td>
 <td>1952</td>
-<td>Ace Magazines</td>
+<td>Ace</td>
 <td><a href="AtomicWar/AtomicWar.html">Details</a></td>
 </tr>
 
@@ -2606,6 +2620,13 @@
 </tr>
 
 <tr>
+<td>Baffling Mysteries</td>
+<td>1951</td>
+<td>Ace</td>
+<td><a href="AceMagazines/AceMagazines.html">Details</a></td> 
+</tr>
+
+<tr>
 <td>Bakers Meet Jingle Belle</td>
 <td>2006</td>
 <td>Dark Horse</td>
@@ -2652,6 +2673,13 @@
 <td>2001</td>
 <td>Marvel</td>
 <td><a href="Banner/Banner.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Banner Comics</td>
+<td>1941</td> 
+<td>Ace</td>
+<td><a href="AceMagazines/AceMagazines.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4049,6 +4077,13 @@
 </tr>
 
 <tr>
+<td>Captain Courageous</td>
+<td>1942</td>
+<td>Ace</td>
+<td><a href="AceMagazines/AceMagazines.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Capstone Publishers</td>
 <td>1991</td>
 <td>Publisher</td>
@@ -4354,6 +4389,13 @@
 <td>1977</td>
 <td>Aardvark-Vanaheim</td>
 <td><a href="Cerebus/Cerebus.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Challenge of the Unknown</td> 
+<td>1950</td> 
+<td>Ace</td>
+<td><a href="AceMagazines/AceMagazines.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7705,25 +7747,24 @@
 </tr>
 
 <tr>
+<td>Foma Jaremtschuk</td>
+<td>1936</td>
+<td>Creator</td>
+<td><a href="FomaJaremtschuk/FomaJaremtschuk.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Forbidden Worlds</td>
 <td>1951</td>
 <td>ACG</td>
 <td><a href="ForbiddenWorlds/ForbiddenWorlds.html">Details</a></td>
 </tr>
 
-
 <tr>
 <td>Force Works</td>
 <td>1994</td>
 <td>Marvel</td>
 <td><a href="ForceWorks/ForceWorks.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Foma Jaremtschuk</td>
-<td>1936</td>
-<td>Creator</td>
-<td><a href="FomaJaremtschuk/FomaJaremtschuk.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7752,6 +7793,13 @@
 <td>1938</td>
 <td>Dell</td>
 <td><a href="FourColor/FourColor.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Four Favorites</td>
+<td>1941</td>
+<td>Ace</td>
+<td><a href="AceMagazines/AceMagazines.html">Details</a></td> 
 </tr>
 
 <tr>
@@ -7913,6 +7961,13 @@
 <td>2006</td>
 <td>Houghton Mifflin</td>
 <td><a href="FunHome/FunHome.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fun Time</td>
+<td>1953</td>
+<td>Ace</td>
+<td><a href="AceMagazines/AceMagazines.html">Details</a></td> 
 </tr>
 
 <tr>
@@ -8871,6 +8926,13 @@
 <td>1997</td>
 <td>Shogakukan</td>
 <td><a href="Hamtaro/Hamtaro.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hand of Fate</td>
+<td>1951</td>
+<td>Ace</td>
+<td><a href="AceMagazines/AceMagazines.html">Details</a></td> 
 </tr>
 
 <tr>
@@ -11253,6 +11315,13 @@
 <td>1988</td>
 <td>Epic</td>
 <td><a href="LightAndDarknessWar/LightAndDarknessWar.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lightning Comics</td>
+<td>1940</td>
+<td>Ace</td> 
+<td><a href="AceMagazines/AceMagazines.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15687,6 +15756,13 @@
 </tr>
 
 <tr>
+<td>Scholastic Corporation</td>
+<td>1920</td>
+<td>Publisher</td>
+<td><a href="Scholastic/Scholastic.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Science Comics</td>
 <td>1946</td>
 <td>Ace</td>
@@ -16009,7 +16085,7 @@
 </tr>
 
 <tr>
-<td>Shadows&amp;Light</td>
+<td>Shadows &amp; Light</td>
 <td>1998</td>
 <td>Marvel</td>
 <td><a href="ShadowsAndLight/ShadowsAndLight.html">Details</a></td>
@@ -19269,6 +19345,13 @@
 <td>1956</td>
 <td>Atlas</td>
 <td><a href="WorldOfSuspense/WorldOfSuspense.html">Details</a></td>
+</tr>
+
+<tr>
+<td>World War III
+<td>1952</td>
+<td>Ace</td>
+<td><a href="AceMagazines/AceMagazines.html">Details</a></td> 
 </tr>
 
 <tr>
